Fixed flex width problem on Firefox

--- a/frontend/web/css/output.css
+++ b/frontend/web/css/output.css
@@ -431,23 +431,7 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1;
 }
 
-.\!article-style > h1 {
-  margin-top: 1.75rem;
-  margin-bottom: 1.75rem;
-  font-family: Staatliches, sans-serif;
-  font-size: 3rem;
-  line-height: 1;
-}
-
 .article-style > h2 {
-  margin-top: 1.25rem;
-  margin-bottom: 1.25rem;
-  font-family: Staatliches, sans-serif;
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
-.\!article-style > h2 {
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
   font-family: Staatliches, sans-serif;
@@ -463,22 +447,7 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 2.25rem;
 }
 
-.\!article-style > h3 {
-  margin-top: 0.75rem;
-  margin-bottom: 0.75rem;
-  font-family: Staatliches, sans-serif;
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
 .article-style > h4 {
-  margin-top: 0.375rem;
-  margin-bottom: 0.375rem;
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
-.\!article-style > h4 {
   margin-top: 0.375rem;
   margin-bottom: 0.375rem;
   font-size: 1.5rem;
@@ -492,13 +461,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1.75rem;
 }
 
-.\!article-style > h5 {
-  margin-top: 0.375rem;
-  margin-bottom: 0.375rem;
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
 .article-style > h6 {
   margin-top: 0.375rem;
   margin-bottom: 0.375rem;
@@ -506,21 +468,7 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1.75rem;
 }
 
-.\!article-style > h6 {
-  margin-top: 0.375rem;
-  margin-bottom: 0.375rem;
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
 .article-style > p {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-  font-size: 1rem;
-  line-height: 1.75rem;
-}
-
-.\!article-style > p {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
   font-size: 1rem;
@@ -537,16 +485,6 @@ Ensure the default browser behavior of the `hidden` attribute.
           text-decoration-line: underline;
 }
 
-.\!article-style > * a {
-  --tw-text-opacity: 1;
-  color: rgb(78 255 166 / var(--tw-text-opacity));
-}
-
-.\!article-style > * a:hover {
-  -webkit-text-decoration-line: underline;
-          text-decoration-line: underline;
-}
-
 .article-style > hr {
   margin-top: 2rem;
   margin-bottom: 2rem;
@@ -558,25 +496,7 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-top-color: rgb(55 65 81 / var(--tw-border-opacity));
 }
 
-.\!article-style > hr {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-  margin-left: auto;
-  margin-right: auto;
-  width: 60%;
-  border-top-width: 2px;
-  --tw-border-opacity: 1;
-  border-top-color: rgb(55 65 81 / var(--tw-border-opacity));
-}
-
 .article-style > * img {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.\!article-style > * img {
   margin-top: 2rem;
   margin-bottom: 2rem;
   margin-left: auto;
@@ -900,6 +820,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 24rem;
 }
 
+.w-auto {
+  width: auto;
+}
+
 .w-\[60\%\] {
   width: 60%;
 }
@@ -914,6 +838,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .\!w-72 {
   width: 18rem !important;
+}
+
+.w-24 {
+  width: 6rem;
+}
+
+.w-16 {
+  width: 4rem;
 }
 
 .max-w-screen-lg {
@@ -966,6 +898,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .flex-col {
   flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .items-start {
